--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,4 @@ GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 GROQ_API_KEY=YOUR_GROQ_API_KEY
 NODE_ENV=development
 PORT=3000
+OPENWEATHER_API_KEY=YOUR_OPENWEATHER_API_KEY
