--- a/web app/.env.example
+++ b/web app/.env.example
@@ -1,3 +1,4 @@
 # Web app example env
 REACT_APP_API_URL=http://localhost:3000
 REACT_APP_MAP_API_KEY=YOUR_MAP_API_KEY
+REACT_APP_OPENWEATHER_API_KEY=YOUR_OPENWEATHER_API_KEY
